--- a/index.html
+++ b/index.html
@@ -26,27 +26,27 @@
             color: var(--text);
             background-image: url("data:image/svg+xml,%3Csvg width='40' height='40' viewBox='0 0 40 40' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='%23333' fill-opacity='0.4' fill-rule='evenodd'%3E%3Cpath d='M0 0h40v40H0V0zm1 1h38v38H1V1z'/%3E%3C/g%3E%3C/svg%3E");
             overflow-x: hidden;
+            margin: 0;
+            padding: 0;
         }
 
         .container {
             max-width: 1200px;
             margin: 0 auto;
-            padding: 2rem 2rem;
+            padding: 2rem;
             position: relative;
-            z-index: 2;
-            margin-top: 1rem;
+            z-index: 1;
         }
 
         header {
             text-align: center;
-            margin-bottom: 3rem;
-            position: relative;
+            margin-bottom: 4rem;
         }
 
         .logo {
             width: 200px;
             height: auto;
-            margin: 1rem auto;
+            margin: 0 auto;
             filter: drop-shadow(0 0 10px var(--primary));
         }
 
@@ -79,12 +79,11 @@
         }
 
         .services {
-            display: flex;
-            flex-direction: column;
-            gap: 3rem;
-            max-width: 800px;
+            display: grid;
+            grid-template-columns: repeat(2, 1fr);
+            gap: 2rem;
+            max-width: 1200px;
             margin: 0 auto 4rem auto;
-            opacity: 1;
             position: relative;
             z-index: 2;
         }
@@ -92,7 +91,7 @@
         .service-card {
             width: 100%;
             margin: 0 auto;
-            background: rgba(0, 0, 0, 0.9);
+            background: rgba(0, 0, 0, 0.5);
             padding: 3rem;
             border: 1px solid var(--primary);
             border-radius: 5px;
@@ -140,25 +139,51 @@
 
         /* New Navigation Styles */
         .nav-menu {
-            position: fixed;
-            top: 2rem;
-            right: 2rem;
-            z-index: 100;
-            margin: 0;
-            pointer-events: auto;
+            margin: 2rem auto;
+            text-align: center;
         }
 
         .nav-menu ul {
             list-style: none;
             margin: 0;
             padding: 0;
-            text-align: right;
+            display: flex;
+            justify-content: center;
+            gap: 2rem;
+        }
+
+        .nav-menu .submenu {
+            position: absolute;
+            background-color: #1a1a1a !important;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.8);
+            padding: 0.5rem;
+            border: 1px solid var(--primary);
+            border-radius: 5px;
+            display: none;
+            flex-direction: column;
+            gap: 0.5rem;
+            z-index: 1000;
+            opacity: 1 !important;
+            backdrop-filter: none;
+            -webkit-backdrop-filter: none;
+        }
+
+        .nav-menu .submenu li {
+            background-color: #1a1a1a !important;
+        }
+
+        .nav-menu .submenu a {
+            background-color: #1a1a1a !important;
+            opacity: 1 !important;
+        }
+
+        .nav-menu li:hover .submenu {
+            display: flex;
         }
 
         .nav-menu li {
-            margin: 0 0 0.5rem 0;
-            padding: 0;
-            text-align: right;
+            position: relative;
+            margin: 0;
         }
 
         .nav-menu a {
@@ -256,29 +281,71 @@
         .nav-menu .submenu a:hover {
             opacity: 1;
         }
+
+        .service-card a {
+            color: var(--primary);
+            text-decoration: none;
+            transition: all 0.3s ease;
+        }
+
+        .service-card a:hover {
+            text-shadow: 0 0 5px var(--primary);
+        }
+
+        html {
+            scroll-behavior: smooth;  /* Enable smooth scrolling site-wide */
+        }
+
+        .service-card p {
+            color: var(--text);
+            text-shadow: 0 0 2px rgba(0, 0, 0, 0.5);
+        }
+
+        .submenu-container {
+            position: absolute;
+            top: 100%;
+            left: 0;
+            background-color: var(--background);
+            border: 1px solid var(--primary);
+            display: none;
+        }
+
+        .services-menu:hover .submenu-container {
+            display: block;
+        }
+
+        .submenu {
+            list-style: none;
+            padding: 0.5rem;
+            margin: 0;
+        }
+
+        .submenu li a {
+            color: var(--text) !important;  /* Force full brightness text */
+            text-decoration: none;
+            display: block;
+            padding: 0.3rem 1rem;
+            white-space: nowrap;
+        }
+
+        .submenu li a:hover {
+            color: var(--primary) !important;
+        }
     </style>
 </head>
 <body>
     <canvas id="starfield"></canvas>
-    <nav class="nav-menu">
-        <ul>
-            <li>
-                <a href="#services">Services</a>
-                <ul class="submenu">
-                    <li><a href="#fractional-ciso">Fractional CISO</a></li>
-                    <li><a href="#product-management">Product Management</a></li>
-                    <li><a href="#expert-calls">Expert Calls</a></li>
-                    <li><a href="#training">Training</a></li>
-                </ul>
-            </li>
-            <li><a href="#contact">Contact</a></li>
-            <li><a href="https://blog.caffeinesecurity.com" target="_blank">Blog</a></li>
-        </ul>
-    </nav>
 
     <div class="container crt-effect">
         <header>
             <img src="assets/logo.png" alt="Caffeine Security Logo" class="logo">
+            <nav class="nav-menu">
+                <ul>
+                    <li><a href="#services">Services</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                    <li><a href="https://blog.caffeinesecurity.com" target="_blank">Blog</a></li>
+                </ul>
+            </nav>
         </header>
 
         <section id="services" class="services">
@@ -299,8 +366,9 @@
             </div>
             <div class="service-card" id="training">
                 <h2>Training</h2>
-                <p>Elevate your team's security awareness and technical capabilities with our customized training programs. We deliver engaging, practical security training that goes beyond compliance checkboxes to create lasting security awareness and behavioral change. Our programs cover everything from basic security awareness to advanced technical training for development and operations teams.</p>
-                <p>Each training program is tailored to your organization's specific needs and technical environment. We incorporate real-world scenarios, hands-on exercises, and relevant case studies to ensure maximum engagement and knowledge retention. Topics include secure coding practices, threat modeling, incident response, social engineering awareness, and security best practices.</p>
+                <img src="assets/svg/doc.svg" alt="Training Icon" class="service-card-icon">
+                <p>Cyber security training should be approachable and practical. Whether it's diving into Active Directory hardening, exploring cloud security strategies, or sharpening threat hunting skills, our training is all about hands-on learning you can use right away.</p>
+                <p><br />We offer custom training tailored to your organization's needs, as well as pre-produced courses available on <a href="http://pluralsight.com/authors/guillaume-ross" target="_blank">Pluralsight</a> and <a href="https://www.iansresearch.com" target="_blank">IANS Research</a>.</p>
             </div>
         </section>
 
@@ -408,6 +476,19 @@
                 icon.style.animationDelay = `${delay}s`;
                 card.querySelector('h2').style.animationDelay = `${delay}s`;
             }
+        });
+
+        // Add smooth scrolling for navigation
+        document.querySelectorAll('.nav-menu a[href^="#"]').forEach(anchor => {
+            anchor.addEventListener('click', function (e) {
+                e.preventDefault();
+                const target = document.querySelector(this.getAttribute('href'));
+                if (target) {
+                    target.scrollIntoView({
+                        behavior: 'smooth'
+                    });
+                }
+            });
         });
     </script>
 </body>
