Small updates to text

--- a/index.html
+++ b/index.html
@@ -351,30 +351,27 @@
         <section id="services" class="services">
             <div class="service-card" id="fractional-ciso">
                 <h2>Fractional CISO</h2>
-                <p>Enhance your startup's security posture with expert leadership without the overhead of a full-time executive. Our fractional CISO service provides strategic guidance, risk management, and security program development tailored to your organization's specific needs and growth stage. We help establish security frameworks, manage compliance requirements, and build security teams that scale.</p>
-                <p>Working closely with your executive team, we develop comprehensive security strategies that align with your business objectives. From implementing security controls and policies to managing vendor relationships and handling security audits, our experienced CISOs bring enterprise-grade security leadership to growing companies. We ensure your security program matures alongside your business.</p>
+                <p>Enhance your startup's security posture with expert leadership without the overhead of a full-time executive. Our goal is for your startup to implement just the right amount of security, until you're ready to hire a full-time CISO.</p>
             </div>
             <div class="service-card" id="product-management">
                 <h2>Product Management</h2>
-                <p>Navigate the complex landscape of security product development with our specialized product management expertise. We help security startups define product strategy, build roadmaps, and deliver solutions that address real market needs. Our team brings deep understanding of both security technologies and product development methodologies to help you build products that stand out in a crowded market.</p>
-                <p>From initial concept to market launch, we guide security startups through the entire product lifecycle. We help prioritize features, conduct market research, gather customer feedback, and ensure your security product meets compliance requirements. Our expertise spans authentication systems, threat detection platforms, compliance tools, and other security solutions.</p>
+                <p>Working on a cybersecurity product and need to add the expertise of a security practitioner to your team? We can help.</p>
             </div>
             <div class="service-card" id="expert-calls">
                 <h2>Expert Calls</h2>
-                <p>Gain valuable insights and strategic guidance through focused consultation sessions with our security experts. Whether you're an investor conducting due diligence, a startup founder evaluating security strategies, or a product manager seeking domain expertise, our consultation calls provide clear, actionable insights tailored to your specific needs and challenges.</p>
-                <p>Our experts bring decades of experience across various security domains including application security, cloud infrastructure, compliance frameworks, and emerging technologies. We provide vendor-neutral advice, market analysis, technical evaluations, and strategic recommendations to help you make informed decisions about security investments and initiatives.</p>
+                <p>Whether you're an investor conducting due diligence, a startup founder evaluating security strategies, or a product manager seeking domain expertise, we can provide actionable insights tailored to your specific needs and challenges.</p>
             </div>
             <div class="service-card" id="training">
                 <h2>Training</h2>
                 <img src="assets/svg/doc.svg" alt="Training Icon" class="service-card-icon">
-                <p>Cyber security training should be approachable and practical. Whether it's diving into Active Directory hardening, exploring cloud security strategies, or sharpening threat hunting skills, our training is all about hands-on learning you can use right away.</p>
+                <p>Whether it's diving into Active Directory hardening, exploring cloud security strategies, or sharpening threat hunting skills, our training is all about hands-on learning you can use right away.</p>
                 <p><br />We offer custom training tailored to your organization's needs, as well as pre-produced courses available on <a href="http://pluralsight.com/authors/guillaume-ross" target="_blank">Pluralsight</a> and <a href="https://www.iansresearch.com" target="_blank">IANS Research</a>.</p>
             </div>
         </section>
 
         <section id="contact" class="contact">
             <h2>CONTACT US</h2>
-            <p>contact@caffeinesecurity.com</p>
+            <p>website@caffeinesecurity.com</p>
         </section>
     </div>
 
@@ -491,5 +488,7 @@
             });
         });
     </script>
+    <script data-goatcounter="https://caffeine.goatcounter.com/count"
+    async src="//gc.zgo.at/count.js"></script>
 </body>
 </html>
